WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116449
[GTK] Fix concatenations of string literals that are not C++11-compliant
https://bugs.webkit.org/show_bug.cgi?id=116449
Summary
[GTK] Fix concatenations of string literals that are not C++11-compliant
Zan Dobersek
Reported
2013-05-20 11:10:05 PDT
[GTK] Fix concatenations of string literals that are not C++11-compliant
Attachments
Patch
(6.90 KB, patch)
2013-05-20 11:13 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-05-20 11:13:10 PDT
Created
attachment 202294
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-20 11:14:55 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Zan Dobersek
Comment 3
2013-05-20 23:16:07 PDT
Comment on
attachment 202294
[details]
Patch Clearing flags on attachment: 202294 Committed
r150421
: <
http://trac.webkit.org/changeset/150421
>
Zan Dobersek
Comment 4
2013-05-20 23:16:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug