[GTK] Fix concatenations of string literals that are not C++11-compliant https://bugs.webkit.org/show_bug.cgi?id=116449

Reviewed by Martin Robinson.

Fix the problematic concatenations of string literals so they are compilable under the C++11 standard. This
is simply a matter of separating the string and the string literal that are being concatenated with a space.

Source/WebCore:

* platform/graphics/gtk/FullscreenVideoControllerGtk.cpp:
* platform/gtk/FileSystemGtk.cpp:
(WebCore::sharedResourcesPath):

Source/WebKit2:

* UIProcess/API/gtk/tests/TestPrinting.cpp:
(testPrintOperationPrint):
* UIProcess/API/gtk/tests/WebExtensionTest.cpp:
(methodCallCallback):

Tools:

* ImageDiff/gtk/ImageDiff.cpp:
(printImage):


Canonical link: https://commits.webkit.org/134832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150421 268f45cc-cd09-0410-ab3c-d52691b4dbfc