Source/WebKit2/UIProcess/API/gtk/tests/WebExtensionTest.cpp
@@ -107,7 +107,7 @@ static void methodCallCallback(GDBusConnection* connection, const char* sender, 
         if (!page) {
             g_dbus_method_invocation_return_error(
                 invocation, G_DBUS_ERROR, G_DBUS_ERROR_INVALID_ARGS,
-                "Invalid page ID: %"G_GUINT64_FORMAT, pageID);
+                "Invalid page ID: %" G_GUINT64_FORMAT, pageID);
             return;
         }
         g_assert_cmpuint(webkit_web_page_get_id(page), ==, pageID);
